# modulation-explainability

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  CURRICULUM.md  CYCLIC_LR_GUIDE.md  MTL.md  PAPER.md  PAPER_TODO.md  Pipfile  README.md  REFACTOR.md  RUNLOG.md  SUGGESTIONS.md  TODO.md  analyze_all_hyperparams.py  analyze_sweep_hyperparams.py  best_model.pth  check_wandb_run.py  constellation_model_torchview_graph  create_dummy_data.py  negative_loss_investigation.md  paper.tex  perturbation_evaluation_log.txt  perturbation_log.txt  pyproject.toml  pytest.ini  requirements.txt  successful_runs_loss_analysis.md  sweep.yml  sweep_4yfw48ad_analysis.md  sweep_architecture_comparison.yml  sweep_curriculum_comparison.yml  sweep_extended_training.yaml  sweep_final_comprehensive.yml  sweep_focused_performance.yaml  sweep_focused_resnet_swin.yml  sweep_latest_status.json  test_cycle_aware_patience.py  test_enhancements.py  (+3 more)
.cursor/rules/: enhanced-coding.mdc
papers/: FUTURE_TODO.md  constellation_amc_explainability.md  enhanced_constellation_amc_explainability.tex  enhanced_constellation_amc_explainability_elsp.tex  ijcnn_reviews.md
src/: atik.py  calculate_pid.py  constellation_loader.py  convert_to_constellation.py  data_loader.py  generate_snr_preserving_constellations.py  inspect_h5.py  multi_task_loss.py  perturb_constellations.py  save_samples.py  sweep.yml  test_constellation.py  train.py  train_constellation.py  train_constellation_regression.py  training.py  training_constellation.py  utils.py  validate_constellation.py  visualization.py
tests/: conftest.py
(+66 files in other folders)
